CMake now implemented. Testing in progress

--- a/SMEFTRunner/CMakeLists.txt
+++ b/SMEFTRunner/CMakeLists.txt
@@ -2,6 +2,15 @@ cmake_minimum_required(VERSION 3.10)
 project(SMEFTRunner VERSION 1.0 DESCRIPTION "Some library")
 
 add_library(SMEFTRunner RGESolver.cc)
+
+  
+  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/SMEFTRunner.pc.in" 
+                 "${CMAKE_CURRENT_BINARY_DIR}/SMEFTRunner.pc" @ONLY)
+  configure_file("${CMAKE_CURRENT_SOURCE_DIR}/smeftrunner-config.in" 
+                 "${CMAKE_CURRENT_BINARY_DIR}/smeftrunner-config" @ONLY)
+  INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/smeftrunner-config ${CMAKE_CURRENT_BINARY_DIR}/SMEFTRunner.pc 
+          DESTINATION ${CMAKE_CURRENT_BINARY_DIR} COMPONENT smeftrunner-config)
+
 #add_executable(RGESolver )
 #target_link_libraries()
 
@@ -10,6 +19,36 @@ add_library(SMEFTRunner RGESolver.cc)
 # specify the C++ standard
 #set(CMAKE_CXX_STANDARD 11)
 #set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+##########  BOOST  ##########
+
+# find_package(Boost) is not used.
+
+set(BOOST_ERROR_MESSAGE "Boost headers could not be found. Please specify the Boost include path with ${RedBold}-DBOOST_INCLUDE_DIR=<include path>/boost/${ColReset}.")
+
+if(NOT BOOST_INCLUDE_DIR)
+  find_path(BOOST_INCLUDE_DIR "boost/tokenizer.hpp" HINTS ENV C_INCLUDE_PATH ENV CPLUS_INCLUDE_PATH DOC "Boost include path")
+  if(BOOST_INCLUDE_DIR)
+    set(BOOST_INCLUDE_DIR "${BOOST_INCLUDE_DIR}/boost/" CACHE PATH "Boost include path" FORCE)
+  else()
+    message(FATAL_ERROR "${BOOST_ERROR_MESSAGE}")
+  endif()
+else()
+  set(BOOST_INCLUDE_DIR ${BOOST_INCLUDE_DIR} CACHE PATH "Boost include path" FORCE)
+  find_path(TMP_BOOST_INC "tokenizer.hpp" PATHS ${BOOST_INCLUDE_DIR} NO_DEFAULT_PATH)
+  if(NOT TMP_BOOST_INC)
+    unset(TMP_BOOST_INC CACHE)
+    message(FATAL_ERROR "${BOOST_ERROR_MESSAGE}")
+  else()
+    unset(TMP_BOOST_INC CACHE)
+  endif()
+endif()
+
+message(STATUS "Found Boost headers in ${BOOST_INCLUDE_DIR}")
+string(REGEX REPLACE "/boost$" "" BOOST_INC ${BOOST_INCLUDE_DIR})
+
+
+
 
 ##########  GSL  ##########
 
@@ -52,7 +91,21 @@ endif()
 
 
 #Optimization and warnings 
-set ( CMAKE_CXX_FLAGS "-O3 -Wall")
+set ( CMAKE_CXX_FLAGS "-O3 -Wall ${GSL_CFLAGS}")
+include_directories(${BOOST_INC})
+ 
+ 
+ 
+ 
+###### make uninstall ###############
+#configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
+ #              "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake" @ONLY)
+#add_custom_target(uninstall COMMAND ${CMAKE_COMMAND} 
+#                 -P ${CMAKE_CURRENT_BINARY_DIR}/#cmake_uninstall.cmake)
 
+ 
+ 
+ 
+ 
 
 
