added backup files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@
 
 # Backups
 *~
+
+# CMake
+CMakeCache.txt
+*/CMakeFiles
+*/CMakeScripts
+*/Makefile
+cmake_install.cmake
+install_manifest.txt
+_deps
