--- a/RGESolver.pc.in
+++ b/RGESolver.pc.in
@@ -7,5 +7,5 @@ Name: RGESolver
 Description: The RGESolver library
 Version: 1.0
 Requires: gsl 
-Cflags: -I${includedir} 
+Cflags: -I${includedir} @CMAKE_CXX_FLAGS@
 Libs: -L${libdir} -lRGESolver 
