Fixed propagation of cxx flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,14 +139,55 @@ endif()
 
 #######################################################
 
+if(NOT ROOT_CONFIG_DIR)
+  find_program(ROOT_CONFIG root-config)
+  if(ROOT_CONFIG)
+    string(REGEX REPLACE "/root-config$" "" TMP_PATH ${ROOT_CONFIG})
+    set(ROOT_CONFIG_DIR ${TMP_PATH} CACHE PATH "Path to root-config")
+    unset(TMP_PATH)
+  endif()
+else()
+  set(ROOT_CONFIG_DIR ${ROOT_CONFIG_DIR} CACHE PATH "Path to root-config" FORCE)
+  find_program(ROOT_CONFIG root-config PATHS ${ROOT_CONFIG_DIR} NO_DEFAULT_PATH)
+endif()
+if(NOT ROOT_CONFIG)
+  unset(ROOT_CONFIG CACHE)
+  message(STATUS "root-config could not be found. Please specify the directory of root-config with ${RedBold}-DROOT_CONFIG_DIR=<directory>${ColReset} if you want to use ROOT to set the cxx standard.")
+  message(STATUS "Will use C++11.")
+  set(CMAKE_CXX_STANDARD 11)
+  set(CMAKE_CXX_STANDARD_REQUIRED on)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+else()  
+  message(STATUS "Found root-config in ${ROOT_CONFIG_DIR}")
+  execute_process(COMMAND ${ROOT_CONFIG} --cflags
+                  OUTPUT_VARIABLE ROOT_CFLAGS
+                  OUTPUT_STRIP_TRAILING_WHITESPACE)
+  message(STATUS "ROOT cflags: ${ROOT_CFLAGS}")
+  string(REGEX MATCH "-std=c\\+\\+[^ \\t]+" ROOT_CXX_STD ${ROOT_CFLAGS})
+  if(ROOT_CXX_STD)
+    string(REGEX REPLACE "-std=c\\+\\+" "" ROOT_CXX_STD ${ROOT_CXX_STD})
+    message(STATUS "ROOT cflags contains the C++ standard flag: -std=c++${ROOT_CXX_STD}.")
+    set(CMAKE_CXX_STANDARD ${ROOT_CXX_STD})
+    set(CMAKE_CXX_STANDARD_REQUIRED on)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${ROOT_CXX_STD}")
+    message(STATUS "CXX FLAGS set to ${CMAKE_CXX_FLAGS}")
+  else()
+    message(STATUS "ROOT cflags does not contain the C++ standard flag. Will use C++11.")
+    set(CMAKE_CXX_STANDARD 11)
+    set(CMAKE_CXX_STANDARD_REQUIRED on)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  endif()
+endif()
+
+
 #Compiler flags: optimization and warnings 
-set ( CMAKE_CXX_FLAGS "-O3 -Wall -Wmissing-braces -pedantic ${GSL_CFLAGS}")
+set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -Wall -Wmissing-braces -pedantic ${GSL_CFLAGS}")
 include_directories(${BOOST_INC})
 
 # Fix behavior of CMAKE_CXX_STANDARD when targeting macOS.
-if (POLICY CMP0025)
-    cmake_policy(SET CMP0025 NEW)
-endif ()	
+# if (POLICY CMP0025)
+#     cmake_policy(SET CMP0025 NEW)
+# endif ()	
 	
 
 #Printing the compiler flags
@@ -192,42 +233,8 @@ file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/gslpp/src/*.h")
 add_library(gslpp OBJECT ${srcs} )
 add_library(RGESolver $<TARGET_OBJECTS:gslpp>  "${CMAKE_CURRENT_SOURCE_DIR}/Solver/src/RGESolver.cpp" )
 target_include_directories(RGESolver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/gslpp/src/)
-
-if(NOT ROOT_CONFIG_DIR)
-  find_program(ROOT_CONFIG root-config)
-  if(ROOT_CONFIG)
-    string(REGEX REPLACE "/root-config$" "" TMP_PATH ${ROOT_CONFIG})
-    set(ROOT_CONFIG_DIR ${TMP_PATH} CACHE PATH "Path to root-config")
-    unset(TMP_PATH)
-  endif()
-else()
-  set(ROOT_CONFIG_DIR ${ROOT_CONFIG_DIR} CACHE PATH "Path to root-config" FORCE)
-  find_program(ROOT_CONFIG root-config PATHS ${ROOT_CONFIG_DIR} NO_DEFAULT_PATH)
-endif()
-if(NOT ROOT_CONFIG)
-  unset(ROOT_CONFIG CACHE)
-  message(STATUS "root-config could not be found. Please specify the directory of root-config with ${RedBold}-DROOT_CONFIG_DIR=<directory>${ColReset} if you want to use ROOT to set the cxx standard.")
-  message(STATUS "Will use C++11.")
-  target_compile_features(gslpp PUBLIC cxx_std_11)
-  target_compile_features(RGESolver PUBLIC cxx_std_11)  
-else()  
-  message(STATUS "Found root-config in ${ROOT_CONFIG_DIR}")
-  execute_process(COMMAND ${ROOT_CONFIG} --cflags
-                  OUTPUT_VARIABLE ROOT_CFLAGS
-                  OUTPUT_STRIP_TRAILING_WHITESPACE)
-  message(STATUS "ROOT cflags: ${ROOT_CFLAGS}")
-  string(REGEX MATCH "-std=c\\+\\+[^ \\t]+" ROOT_CXX_STD ${ROOT_CFLAGS})
-  if(ROOT_CXX_STD)
-    string(REGEX REPLACE "-std=c\\+\\+" "cxx_std_" ROOT_CXX_STD ${ROOT_CXX_STD})
-    message(STATUS "ROOT cflags contains the C++ standard flag: ${ROOT_CXX_STD}.")
-    target_compile_features(gslpp PUBLIC ${ROOT_CXX_STD})
-    target_compile_features(RGESolver PUBLIC ${ROOT_CXX_STD})
-  else()
-    message(STATUS "ROOT cflags does not contain the C++ standard flag. Will use C++11.")
-    target_compile_features(gslpp PUBLIC cxx_std_11)
-    target_compile_features(RGESolver PUBLIC cxx_std_11)  
-  endif()
-endif()
+target_compile_features(gslpp PUBLIC "cxx_std_${CMAKE_CXX_STANDARD}")
+target_compile_features(RGESolver PUBLIC "cxx_std_${CMAKE_CXX_STANDARD}")
 
 
 #include(CMakePrintHelpers)
