Removed explicit std declaration in rgesolver-config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,10 +153,8 @@ endif()
 if(NOT ROOT_CONFIG)
   unset(ROOT_CONFIG CACHE)
   message(STATUS "root-config could not be found. Please specify the directory of root-config with ${RedBold}-DROOT_CONFIG_DIR=<directory>${ColReset} if you want to use ROOT to set the cxx standard.")
-  message(STATUS "Will use C++11.")
-  set(CMAKE_CXX_STANDARD 11)
-  set(CMAKE_CXX_STANDARD_REQUIRED on)
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  message(STATUS "Will use standard offered by the compiler (at least C++11).")
+  set(my_cxx_standard 11)
 else()  
   message(STATUS "Found root-config in ${ROOT_CONFIG_DIR}")
   execute_process(COMMAND ${ROOT_CONFIG} --cflags
@@ -167,15 +165,11 @@ else()
   if(ROOT_CXX_STD)
     string(REGEX REPLACE "-std=c\\+\\+" "" ROOT_CXX_STD ${ROOT_CXX_STD})
     message(STATUS "ROOT cflags contains the C++ standard flag: -std=c++${ROOT_CXX_STD}.")
-    set(CMAKE_CXX_STANDARD ${ROOT_CXX_STD})
-    set(CMAKE_CXX_STANDARD_REQUIRED on)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++${ROOT_CXX_STD}")
-    message(STATUS "CXX FLAGS set to ${CMAKE_CXX_FLAGS}")
+    set(my_cxx_standard ${ROOT_CXX_STD})
+    message(STATUS "cxx standard set to ${my_cxx_standard} as required by root-config.")
   else()
-    message(STATUS "ROOT cflags does not contain the C++ standard flag. Will use C++11.")
-    set(CMAKE_CXX_STANDARD 11)
-    set(CMAKE_CXX_STANDARD_REQUIRED on)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    message(STATUS "ROOT cflags does not contain the C++ standard flag. Will use standard offered by the compiler (at least C++11).")
+    set(my_cxx_standard 11)
   endif()
 endif()
 
@@ -233,8 +227,8 @@ file(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/gslpp/src/*.h")
 add_library(gslpp OBJECT ${srcs} )
 add_library(RGESolver $<TARGET_OBJECTS:gslpp>  "${CMAKE_CURRENT_SOURCE_DIR}/Solver/src/RGESolver.cpp" )
 target_include_directories(RGESolver PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/gslpp/src/)
-target_compile_features(gslpp PUBLIC "cxx_std_${CMAKE_CXX_STANDARD}")
-target_compile_features(RGESolver PUBLIC "cxx_std_${CMAKE_CXX_STANDARD}")
+target_compile_features(gslpp PUBLIC "cxx_std_${my_cxx_standard}")
+target_compile_features(RGESolver PUBLIC "cxx_std_${my_cxx_standard}")
 
 
 #include(CMakePrintHelpers)
