--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,7 +102,7 @@ set(BOOST_LIB_ERROR_MESSAGE "Boost libraries could not be found. Please specify 
 
 if(NOT BOOST_LIB_DIR)
   find_library(BOOST_LIB_DIR "libboost_serialization.a" HINTS $ENV{LD_LIBRARY_PATH} DOC "Boost library path")
-  if(BOOST_LIB_DIR-NOTFOUND)
+  if(NOT BOOST_LIB_DIR)
     message(FATAL_ERROR "${BOOST_LIB_ERROR_MESSAGE}")
   else()
     string(REGEX REPLACE "/libboost_serialization.a$" "" BOOST_LIB_DIR ${BOOST_LIB_DIR})
@@ -111,7 +111,7 @@ if(NOT BOOST_LIB_DIR)
 else()
   set(BOOST_LIB_DIR ${BOOST_LIB_DIR} CACHE PATH "Boost library path" FORCE)
   find_path(TMP_BOOST_LIB "libboost_serialization.a" PATHS ${BOOST_LIB_DIR} NO_DEFAULT_PATH)
-  if(TMP_BOOST_LIB_NOTFOUND)
+  if(NOT TMP_BOOST_LIB)
     unset(TMP_BOOST_LIB CACHE)
     message(FATAL_ERROR "${BOOST_LIB_ERROR_MESSAGE}")
   else()
@@ -138,7 +138,7 @@ else()
 endif()
 if(NOT GSL_CONFIG)
   unset(GSL_CONFIG CACHE)
-  message(FATAL_ERROR "gsl-confg could not be found. Please specify the directory of gsl-config with ${RedBold}-DGSL_CONFIG_DIR=<directory>${ColReset}.")
+  message(FATAL_ERROR "gsl-config could not be found. Please specify the directory of gsl-config with ${RedBold}-DGSL_CONFIG_DIR=<directory>${ColReset}.")
 else()  
   message(STATUS "Found gsl-config in ${GSL_CONFIG_DIR}")
   execute_process(COMMAND ${GSL_CONFIG} --version
