--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,16 +101,16 @@ string(REGEX REPLACE "/boost$" "" BOOST_INC ${BOOST_INCLUDE_DIR})
 set(BOOST_LIB_ERROR_MESSAGE "Boost libraries could not be found. Please specify the Boost library path with ${RedBold}-DBOOST_LIB_DIR=<boost library path>${ColReset}.")
 
 if(NOT BOOST_LIB_DIR)
-  find_library(BOOST_LIB_DIR "libboost_serialization.a" HINTS $ENV{LD_LIBRARY_PATH} DOC "Boost library path")
+  find_library(BOOST_LIB_DIR boost_serialization HINTS $ENV{LD_LIBRARY_PATH} DOC "Boost library path")
   if(NOT BOOST_LIB_DIR)
     message(FATAL_ERROR "${BOOST_LIB_ERROR_MESSAGE}")
   else()
-    string(REGEX REPLACE "/libboost_serialization.a$" "" BOOST_LIB_DIR ${BOOST_LIB_DIR})
+    string(REGEX REPLACE "/.?.?.?boost_serialization\\..*$" "" BOOST_LIB_DIR ${BOOST_LIB_DIR})
     set(BOOST_LIB_DIR "${BOOST_LIB_DIR}" CACHE PATH "Boost library path" FORCE)
   endif()
 else()
   set(BOOST_LIB_DIR ${BOOST_LIB_DIR} CACHE PATH "Boost library path" FORCE)
-  find_path(TMP_BOOST_LIB "libboost_serialization.a" PATHS ${BOOST_LIB_DIR} NO_DEFAULT_PATH)
+  find_library(TMP_BOOST_LIB boost_serialization ${BOOST_LIB_DIR} NO_DEFAULT_PATH)
   if(NOT TMP_BOOST_LIB)
     unset(TMP_BOOST_LIB CACHE)
     message(FATAL_ERROR "${BOOST_LIB_ERROR_MESSAGE}")
